# agent-architectures

./: .env.sample  .gitignore  CLAUDE.md  README.md  main.py  pyproject.toml
01-base/: main.py
02-react/: main.py
03-react-loop-under-the-hood/: main.py
04-react-loop-raw-function-calling/: main.py
05-raw-react-prompts/: main.py
06-rag/: ingestion.py  main.py
07-agentic-rag/: ingestion.py
07-agentic-rag/backend/: core.py
08-langgraph-react/: main.py  nodes.py  react.py
09-langgraph-reflection/: chains.py  main.py
10-langgraph-reflexion/: chains.py  main.py  schemas.py  tool_executor.py
11-langgraph-corrective-rag/: ingestion.py  main.py
11-langgraph-corrective-rag/graph/: graph.py  state.py
11-langgraph-corrective-rag/graph/chains/: retrieval_grade.py
11-langgraph-corrective-rag/graph/nodes/: retrieve.py  web_search.py
12-langgraph-self-rag/graph/: graph.py
12-langgraph-self-rag/graph/chains/: generation.py  hallucination_grader.py  retrieval_grade.py
12-langgraph-self-rag/graph/nodes/: generate.py  grade_documents.py
13-langgraph-adaptative-rag/: main.py
13-langgraph-adaptative-rag/graph/: graph.py
13-langgraph-adaptative-rag/graph/chains/: answer_grader.py  retrieval_grade.py  router.py
13-langgraph-adaptative-rag/graph/chains/tests/: test_chains.py
14-mcp-server/: main.py
14-mcp-server/servers/: math_server.py  weather_server.py
docs/: ARCHITECTURE.md  PROJECT_DETAILS.md
