[project]
name = "langraph-udemy-eden-marco"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "black>=26.5.1",
    "isort>=8.0.1",
    "langchain>=1.3.1",
    "langchain-groq>=1.1.2",
    "langchain-ollama>=1.1.0",
    "langchain-tavily>=0.2.18",
    "pydantic>=2.13.4",
    "python-dotenv>=1.2.2",
    "tavily-python>=0.7.25",
]
