[project]
name = "langraph-udemy-eden-marco"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "black>=26.5.1",
    "fastapi",
    "isort>=8.0.1",
    "langchain>=1.3.1",
    "langchain-chroma",
    "langchain-community>=0.4.2",
    "langchain-groq>=1.1.2",
    "langchain-ollama>=1.1.0",
    "langchain-pinecone>=0.2.13",
    "langchain-tavily>=0.2.18",
    "langchain-text-splitters>=1.1.2",
    "langchainhub",
    "langgraph>=1.2.1",
    "opentelemetry-exporter-otlp-proto-grpc>=1.30.0",
    "pydantic>=2.13.4",
    "pytest>=9.1.0",
    "python-dotenv>=1.2.2",
    "streamlit",
    "streamlit-chat",
    "tavily-python>=0.7.25",
    "unstructured",
    "uvicorn",
]

[dependency-groups]
dev = [
    "ipykernel",
]
